Fix height of navigation on smaller screens

--- a/src/stylus/layout.styl
+++ b/src/stylus/layout.styl
@@ -9,7 +9,7 @@
   margin 0 auto
 
 .header
-  height 2em
+  min-height 2em
   padding-top 3em
   padding-bottom 1em
   text-align center
